syntax = "proto3";

package notification;

import "google/protobuf/timestamp.proto";

message EmailMessage {
    string message_id = 1;
    string subject = 2;
    string from = 3;
    repeated string recipients = 4;
    string body = 5;
}

message InAppMessage {
    string message_id = 1;
    string device_id  = 2;
    string title = 3;
    string body = 4;
}

message SmsMessage {
    string message_id = 1;
    string phone_number = 2;
    string body = 3;
}

message SendRequest {
    oneof msg {
        EmailMessage email = 2;
        InAppMessage in_app = 3;
        SmsMessage sms = 4;
    }
}

message SendResponse {
    string message_id = 1;
    google.protobuf.Timestamp sent_at = 2;
}
